mariadb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: bitnami/mariadb:latest
          resources:
            limits:
              memory: 512Mi
              cpu: "0.3"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-persistent-storage
              mountPath: /bitnami/mariadb
            - name: mariadb-volume
              mountPath: /etc/config
      volumes:
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc
        - name: mariadb-volume
          configMap:
            name: mariadb-config
