wordpress-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: bitnami/wordpress-nginx:latest
          resources:
            limits:
              memory: 512Mi
              cpu: "0.3"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /bitnami/wordpress
            - name: wordpress-volume
              mountPath: /etc/config
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wordpress-pvc
        - name: wordpress-volume
          configMap:
            name: wordpress-config
