mariadb-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb
