wordpress-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: wordpress
