wordpress-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: wp-example
  namespace: <your-namespace>
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt # or sectigo
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - <your-host>
      secretName: wp-example-tls
  rules:
    - host: <your-host>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 8080
